--- a/templates/base.html
+++ b/templates/base.html
@@ -52,11 +52,16 @@
   background-color: #8aa78b;
 }
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
+}
     </style>
     {% endblock styles %}
     {% load bootstrap_icons %}
     {% load static %}
-    <link rel='stylesheet' href="{% static 'js/search.js' %}">
   </head>
   <body class="d-flex flex-column h-100">
     <header>
@@ -72,7 +77,7 @@
               <a class="nav-link " href="{% url 'home' %}">HomePage</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href=#>Promotions</a>
+              <a class="nav-link " href="{% url 'promoted-trips' %}">Promotions</a>
             </li>
             <li class="nav-item">
               <a class="nav-link " href="{% url 'administrator-page' %}">Administrator</a>
@@ -145,13 +150,7 @@
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
             <h6 class="text-uppercase mb-4 font-weight-bold">Privacy Policy</h6>
             <p>
-              <a class="text-white">About Us</a>
-            </p>
-            <p>
-              <a class="text-white">MDWordPress</a>
-            </p>
-            <p>
-              <a class="text-white">BrandFlow</a>
+              <a class="text-white" style="text-decoration: None;">About Us</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -250,7 +249,6 @@
     {% block scripts %}
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
-    <script src="{% static 'js/search.js' %}"></script>
     {% endblock scripts %}
   </body>
 </html>
