--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -21,20 +21,13 @@
     {% if trips %} 
     <div class="alert alert-primary"><i class="fas fa-globe fa-fw me-3"></i>Browse Trips </div>
     <div class="alert alert-info">
-        <a href="{% url 'home' %}">All</a>
+        <a href="{% url 'home' %}" style="text-decoration: none;">All Trips</a>
      </div>
-     <div class="alert alert-info">
-      <a href="{% url 'interval-time' %}" style="text-decoration: none;">Choose time</a>
-      <form action="" method="post" novalidate>
-        {% csrf_token %}
-        {{ form }}
-      <div><input type="date" value={{interval.first_date}}></div>
-      <div><input type="date" value={{interval.second_date}}></div>
-      <div class="text-center">
-        <button class="btn btn-primary" type="submit">Go</button>
-    </div>
+     <form class="alert alert-info" role="search" method="get" action="{% url 'interval-time' %}">
+      <div><input type="date"  aria-label="Search" name="q"  {% if search_query %} value="{{ search_query }}" {% endif %}></div>
+      <div><input type="date"  aria-label="Search" name="q1" {% if search_query %} value="{{ search_query }}" {% endif %}></div>
+      <button class="btn btn-outline-secondary">Choose time</button>
     </form>
-     </div>
      <div class="alert alert-info">
      <div class="dropdown">
       <button class="btn btn-outline-light" style="color:blue;">Types    <i class="fa fa-arrow-down"></i></button>
@@ -79,5 +72,6 @@
         {% endfor %}
     </div>
 </aside>
+</div>
 <br><br><br>
 {% endblock content %}
