--- a/administrator/templates/administrator/hotels/hotels_list.html
+++ b/administrator/templates/administrator/hotels/hotels_list.html
@@ -14,6 +14,7 @@
 {% endblock styles %}
 {% block content %}
 <br><br><br>
+{% if perms.app_label.addhotel %}
 <div class="d-flex justify-content-between align-items-center">
   <h1>Hotels</h1>
   <a class="btn btn-primary" href="{% url 'add-hotel' %}">Add Hotel</a>
@@ -38,4 +39,5 @@
     </div>
     {% endfor %}
 </div>
+{% endif %}
 {% endblock content %}
