--- a/administrator/templates/administrator/location/airports_list.html
+++ b/administrator/templates/administrator/location/airports_list.html
@@ -13,6 +13,7 @@
     {% endblock styles %}
     {% block content %}
     <br><br><br>
+    {% if perms.app_label.addairport %}
     <div class="header-title">
         <h1>List of airports</h1>
         <a class="btn btn-primary" href="{% url 'airport-add' %}">Add Airport</a>
@@ -25,4 +26,5 @@
         </div>
     {% endfor %}
     </section>
+    {% endif %}
     {% endblock content %}
