--- a/administrator/templates/administrator/trips/trips_list.html
+++ b/administrator/templates/administrator/trips/trips_list.html
@@ -12,6 +12,7 @@
 {% endblock styles %}
 {% block content %}
 <br><br><br>
+{% if perms.app_label.addtrip %}
 <div class="header-title">
     <h1>List of trips</h1>
     <a class="btn btn-primary" href="{% url 'add-trip' %}">Add Trip</a>
@@ -42,4 +43,5 @@
         {% endfor %}
     </div>
 </section>
+{% endif %}
 {% endblock content %}
