--- a/templates/base.html
+++ b/templates/base.html
@@ -97,9 +97,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'logout' %}"><p style="color:white;">{{ user.username }} Logout</p></a>
             </li>
-            <li class="nav-item">
+            <!--<li class="nav-item">
               <a class="nav-link" href="#">My trips</a>
-            </li>
+            </li>-->
             {% else %}
             <li class="nav-item"> 
               <a class="nav-link" href="{% url 'login' %}">Login</a>
