--- a/administrator/templates/administrator/location/countries_list.html
+++ b/administrator/templates/administrator/location/countries_list.html
@@ -1,32 +1,41 @@
-{% extends 'administrator/index_location.html' %}
-{% block styles %}
-{{ block.super }}
+{% extends 'administrator/index_location.html' %} {% block styles %} {{ block.super }}
 <style>
-    .header-title {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-    }
-    </style>
-    {% endblock styles %}
-    {% block content %}
-    <br><br><br>
-    {% if perms.app_label.addcountry %}
+  .header-title {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+</style>
+{% endblock styles %} {% block content %}
+<br /><br /><br />
+{% if perms.app_label.addcountry %}
 <div class="header-title">
-    <h1>List of countries</h1>
-    <a class="btn btn-primary" href="{% url 'country-add' %}">Add Country</a>
+  <h1>List of countries</h1>
+  <a class="btn btn-primary" href="{% url 'country-add' %}">Add Country</a>
 </div>
 <section>
-{% for country in countries %}
-<div>
-<h3>
-    <a href="{% url 'country-detail' pk=country.pk %}" style="text-decoration: none;">
-        {{ country.name }}
-    
-</h3>
-<div>
-{% endfor %}
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Country Name</th>
+        <th scope="col">Country Continent</th>
+      </tr>
+    </thead>
+    {% for country in countries %}
+    <tbody>
+      <tr>
+        <td>
+          <a
+            href="{% url 'country-detail' pk=country.pk %}"
+            style="text-decoration: none"
+            >{{ country.name}}</a
+          >
+        </td>
+        <td>{{ country.continent.name }}</td>
+      </tr>
+    </tbody>
+    {% endfor %}
+  </table>
 </section>
-{% endif %}
-{% endblock content %}
+{% endif %} {% endblock content %}
