added a pagination into homepage and trips list for administrator

--- a/administrator/templates/administrator/trips/trips_list.html
+++ b/administrator/templates/administrator/trips/trips_list.html
@@ -1,4 +1,5 @@
 {% extends 'administrator/index_location.html' %}
+{% load i18n pagination_extras %}
 {% block styles %}
 {{ block.super }}
 <style>
@@ -17,37 +18,75 @@
     <h1>List of trips</h1>
     <a class="btn btn-primary" href="{% url 'add-trip' %}">Add Trip</a>
 </div>
+
+<!--<div>
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      <li class="page-item{% if not page_obj.has_previous %} disabled{% endif %}">
+        <a class="page-link" href="{% if page_obj.has_previous %}?page={{ page_obj.previous_page_number }}{% endif %}">Previous</a>
+      </li>
+      {% for page in paginator|elided_pages:page_obj.number %}
+        <li class="page-item">
+          {% if page == paginator.ELLIPSIS %}
+            <span class="page-link disabled">{{ page }}</span>
+          {% else %}
+          <a class="page-link" href="?page={{ page }}">{{ page }}</a>
+          {% endif %}
+        </li>
+      {% endfor %}
+      <li class="page-item{% if not page_obj.has_next %} disabled{% endif %}">
+        <a class="page-link" href="{% if page_obj.has_next %}?page={{ page_obj.next_page_number }}{% endif %}">Next</a>
+      </li>
+    </ul>
+  </nav>
+</div>-->
 <section>
+    {% if trips %} 
     <div style="display: flex; flex-direction:row; flex-wrap: wrap">
-      {% if trips %} 
-      <div style="display: flex; flex-direction:row; flex-wrap: wrap">
-          {% for trip in trips %}
-              <div class="card mb-2 mt-5" style="max-width: 410px; max-height: 180px;">
-              <div class="row g-0">
-                <div class="col-md-4">
-                  {% if trip.hotel_to_where.photo %}
-                  <img class="card-img-top" height="100%" src="{{ trip.hotel_to_where.photo.url }}" alt="Profile picture here ...">
-                  {% else %}
-                  <div class="alert alert-warning" role="alert">No photo for this hotel</div>
-                  {% endif %}
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h6 class="card-title">{{ trip.city_from_where.name }} to {{ trip.city_to_where.name}}</h6>
-                    <p class="card-text"><h5>
-                      Journey lasts {{ trip.number_of_days }} from {{ trip.date_departure}} to
-                      {{ trip.date_return }}
-                    </h5></p>
-                  </div>
-                </div>
-                <div class="btn btn-info"><a href="{% url 'trip-detail' pk=trip.pk %}" style="text-decoration: none;">Details</a></div>
+        {% for trip in trips %}
+            <div class="card mb-2 mt-5" style="max-width: 410px; max-height: 180px;">
+            <div class="row g-0">
+              <div class="col-md-4">
+                {% if trip.hotel_to_where.photo %}
+                <img class="card-img-top" height="100%" src="{{ trip.hotel_to_where.photo.url }}" alt="Profile picture here ...">
+                {% else %}
+                <div class="alert alert-warning" role="alert">No photo for this hotel</div>
+                {% endif %}
               </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h6 class="card-title">{{ trip.city_from_where.name }} to {{ trip.city_to_where.name}}</h6>
+                  <p class="card-text"><h5>
+                    Journey lasts {{ trip.number_of_days }} from {{ trip.date_departure}} to
+                    {{ trip.date_return }}
+                  </h5></p>
+                </div>
               </div>
-          {% endfor %}
-      </div>
+              <div class="btn btn-info"><a href="{% url 'trip-detail' pk=trip.pk %}" style="text-decoration: none;">Details</a></div>
+            </div>
+            </div>
+        {% endfor %}
     </div>
-    {% endif %}
-    </div>
+  </div>
+  {% endif %}
+  <br><br>
+<div class="pagination" style="margin-left:36% ;">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <div class="btn btn-primary"><a href="?page=1" style="color: white; text-decoration: none;"><i class="bi bi-chevron-bar-left"></i>&laquo;</a></div>
+            <div class="btn btn-primary"><a href="?page={{ page_obj.previous_page_number }}" style="color: white; text-decoration: none;">Previous</a></div>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <div class="btn btn-primary"><a href="?page={{ page_obj.next_page_number }}" style="color: white; text-decoration: none;">Next</a></div>
+            <div class="btn btn-primary"><a href="?page={{ page_obj.paginator.num_pages }}" style="color: white; text-decoration: none;"><i class="bi bi-chevron-bar-right"></i>&raquo;</a></div>
+        {% endif %}
+    </span>
+</div>
 </section>
 {% endif %}
 {% endblock content %}
