added rest framework pagination

--- a/administrator/templates/administrator/trips/trips_list.html
+++ b/administrator/templates/administrator/trips/trips_list.html
@@ -1,5 +1,6 @@
 {% extends 'administrator/index_location.html' %}
 {% load i18n pagination_extras %}
+{% load static %}
 {% block styles %}
 {{ block.super }}
 <style>
