--- a/administrator/templates/administrator/index_location.html
+++ b/administrator/templates/administrator/index_location.html
@@ -6,6 +6,9 @@
     <meta name="description" content="MOON TRAVEL AGENCY">
     <meta name="author" content="ALBANIA">
     <title>{% block title %} ADMINISTRATOR {% endblock title %}</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
+    <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
     {% block styles %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <style>
