--- a/templates/base.html
+++ b/templates/base.html
@@ -82,6 +82,9 @@
             <li class="nav-item">
               <a class="nav-link " href="{% url 'administrator-page' %}">Administrator</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link " href="{% url 'feedback' %}">Feedback</a>
+            </li>
 
             </ul>
             <ul class="navbar-nav ms-auto mb-2 mb-md-0">
